# DataConnectorsCodeGen

./: .gitignore  README.md  pyproject.toml
dataconnectors_codegen/: __main__.py  main.py
dataconnectors_codegen/generator/: engine.py  java_generator.py  meta_generator.py  pom_generator.py  schema_generator.py
dataconnectors_codegen/parsers/: mapping_parser.py  openapi_parser.py
dataconnectors_codegen/templates/java/: Client.java.j2  Connector.java.j2  Converter.java.j2  Pojo.java.j2
dataconnectors_codegen/templates/resources/: meta.json.j2  pom.xml.j2  schema.orx.j2
docs/: dataconnectors_codegen_archdesign.md  dataconnectors_codegen_projectrequirements.md
docs/code review/: code_review_v3.md  jinja_template_review.md
tests/integration_test/inputs/: minimal_openapi.json
tests/smoke_test/: run_smoke_test.py  test_cases.json
tests/smoke_test/inputs/: minimal_mapping.json
tools/: pdf_2_markdown.py
